--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,12 @@ h1 .sub-headline {
 	font-weight: 300;
 }
 
-/* Map */
-#station-map {
+#chloropleth {
 	width: 100%;
 	height: 600px;
+}
+
+#chloropleth-dropdown {
+	width: 200px;
+	margin-bottom: 10px;
 }
