--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,23 @@ h1 .sub-headline {
 
 #chloropleth {
 	width: 100%;
-	height: 600px;
+	height: 1000px;
 }
 
 #chloropleth-dropdown {
 	width: 200px;
 	margin-bottom: 10px;
+}
+
+.legend {
+    line-height: 18px;
+    color: #555;
+}
+
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
 }
