--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,16 @@ h1 .sub-headline {
 	text-align: center;
 	font-weight: 400;
 }
+
+/**
+ * Main page css
+ */
+#page_title {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-family: "Georgia";
+  border-bottom: 1px solid black;
+  width: 970px;
+  padding-bottom: 20px;
+}
