--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,20 @@ h1 .sub-headline {
 	font-weight: 300;
 }
 
+/**
+ * Main page css
+ */
+#page_title {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-family: "Georgia";
+  border-bottom: 1px solid black;
+  width: 970px;
+  padding-bottom: 20px;
+}
+
+/****************************** Chloropleth ******************************/
 #chloropleth {
 	width: 900px;
 	height: 700px;
@@ -59,15 +73,65 @@ h1 .sub-headline {
 	font-weight: 400;
 }
 
-/**
- * Main page css
- */
-#page_title {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  font-family: "Georgia";
-  border-bottom: 1px solid black;
-  width: 970px;
-  padding-bottom: 20px;
+/****************************** Animation ******************************/
+#truck-route-map {
+	width: 90%;
+	height: 1000px;
 }
+
+#heat-map {
+    width: 90%;
+    height: 1000px;
+}
+
+#wrapper {
+    width: 960px;
+    margin: 30px auto 0;
+}
+
+/*svg {
+    position: relative;
+}
+path {
+    fill: yellow;
+    stroke-width: 2px;
+    stroke: red;
+    stroke-opacity: 1;
+}
+.travelMarker {
+    fill: yellow;
+    opacity: 0.75;
+}
+.waypoints {
+    fill: black;
+    opacity: 0;
+}
+}
+.drinks {
+    stroke: black;
+    fill: red;
+}
+.lineConnect {
+    fill: none;
+    stroke: black;
+    opacity: 1;
+}
+.locnames {
+    fill: black;
+    text-shadow: 1px 1px 1px #FFF, 3px 3px 5px #000;
+    font-weight: bold;
+    font-size: 13px;
+}
+
+
+*/
+
+
+
+
+
+
+
+
+
+
