--- a/css/style.css
+++ b/css/style.css
@@ -79,52 +79,27 @@ h1 .sub-headline {
 	height: 1000px;
 }
 
+div.tooltip {
+    position: absolute;
+    text-align: center;
+    width: 160px;
+    /*height: 28px;*/
+    padding: 2px;
+    font: 12px sans-serif;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
+}
+
+/****************************** Heat Map ******************************/
+
 #heat-map {
     width: 90%;
     height: 1000px;
 }
 
-#wrapper {
-    width: 960px;
-    margin: 30px auto 0;
-}
 
-/*svg {
-    position: relative;
-}
-path {
-    fill: yellow;
-    stroke-width: 2px;
-    stroke: red;
-    stroke-opacity: 1;
-}
-.travelMarker {
-    fill: yellow;
-    opacity: 0.75;
-}
-.waypoints {
-    fill: black;
-    opacity: 0;
-}
-}
-.drinks {
-    stroke: black;
-    fill: red;
-}
-.lineConnect {
-    fill: none;
-    stroke: black;
-    opacity: 1;
-}
-.locnames {
-    fill: black;
-    text-shadow: 1px 1px 1px #FFF, 3px 3px 5px #000;
-    font-weight: bold;
-    font-size: 13px;
-}
-
-
-*/
 
 
 
