--- a/v2/css/style2.css
+++ b/v2/css/style2.css
@@ -60,12 +60,12 @@ h1 .sub-headline {
 }
 
 #chloropleth-tooltip-box {
-  margin: auto;
+  /*margin: auto;*/
 	/*width: 700px;*/
-  width: 100%;
-	height: 200px;
+  /*width: 100%;*/
+	height: 385px;
 	overflow: auto;
-	font-size: 13px;
+	/*font-size: 13px;*/
 	/*padding: 15px;*/
 }
 
