--- a/v2/css/style2.css
+++ b/v2/css/style2.css
@@ -63,7 +63,7 @@ h1 .sub-headline {
   /*margin: auto;*/
 	/*width: 700px;*/
   /*width: 100%;*/
-	height: 500px;
+	height: 468px;
 	overflow: auto;
 	/*font-size: 13px;*/
 	/*padding: 15px;*/
@@ -83,6 +83,14 @@ h1 .sub-headline {
 .chloropleth_right_col_item {
   margin-left: auto;
   margin-right: auto;
+}
+
+#chloropleth_table_header {
+  color: white;
+  background-color: #34495E;
+  margin-bottom: 0px;
+  table-layout: fixed;
+  font-weight: 100;
 }
 
 /****************************** Animation ******************************/
