--- a/css/style.css
+++ b/css/style.css
@@ -81,16 +81,74 @@ h1 .sub-headline {
 
 div.tooltip {
     position: absolute;
-    text-align: center;
-    width: 160px;
+    text-align: left;
+    width: 175px;
     /*height: 28px;*/
-    padding: 2px;
+    padding: 5px;
     font: 12px sans-serif;
-    background: lightsteelblue;
+    /*background: lightsteelblue;*/
+    background: #262626;
+    color: white;
     border: 0px;
     border-radius: 8px;
     pointer-events: none;
 }
+
+/*TIMELINE*/
+
+p {
+    color: white;
+    margin: 50px;
+}
+
+a {
+    color: #4FDEF2;
+}
+
+.axis {
+    font: 10px sans-serif;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+}
+
+.axis .domain {
+    fill: none;
+    stroke: #000;
+    stroke-opacity: .3;
+    stroke-width: 10px;
+    stroke-linecap: round;
+}
+
+.axis .halo {
+    fill: none;
+    stroke: #ddd;
+    stroke-width: 8px;
+    stroke-linecap: round;
+}
+
+.slider .handle {
+    fill: #fff;
+    stroke: #000;
+    stroke-opacity: .5;
+    stroke-width: 1.25px;
+    cursor: crosshair;
+    position: absolute;
+}
+
+.truck-legend {
+    line-height: 18px;
+    color: #555;
+}
+
+.truck-legend i {
+    width: 38px;
+    height: 38px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
+
 
 /****************************** Heat Map ******************************/
 
