--- a/v2/css/style2.css
+++ b/v2/css/style2.css
@@ -96,10 +96,81 @@ h1 .sub-headline {
 
 /****************************** Animation ******************************/
 #truck-route-map {
-	width: 90%;
-	height: 1000px;
+  width: 90%;
+  height: 767px;
 }
 
+div.tooltip {
+    position: absolute;
+    text-align: left;
+    width: 175px;
+    /*height: 28px;*/
+    padding: 5px;
+    font: 12px sans-serif;
+    /*background: lightsteelblue;*/
+    background: #262626;
+    color: white;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
+}
+
+/*TIMELINE*/
+
+/*p {
+    color: white;
+    margin: 50px;
+}
+
+a {
+    color: #4FDEF2;
+}*/
+
+.axis {
+    font: 10px sans-serif;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+}
+
+.axis .domain {
+    fill: none;
+    stroke: #000;
+    stroke-opacity: .3;
+    stroke-width: 10px;
+    stroke-linecap: round;
+}
+
+.axis .halo {
+    fill: none;
+    stroke: #ddd;
+    stroke-width: 8px;
+    stroke-linecap: round;
+}
+
+.slider .handle {
+    fill: #fff;
+    stroke: #000;
+    stroke-opacity: .5;
+    stroke-width: 1.25px;
+    cursor: crosshair;
+    position: absolute;
+}
+
+.truck-legend {
+    line-height: 18px;
+    color: #555;
+}
+
+.truck-legend i {
+    width: 38px;
+    height: 38px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
+
+/****************************** Heatmap ******************************/
 #heat-map {
     width: 90%;
     height: 1000px;
