--- a/v2/css/style2.css
+++ b/v2/css/style2.css
@@ -96,7 +96,7 @@ h1 .sub-headline {
 
 /****************************** Animation ******************************/
 #truck-route-map {
-  width: 90%;
+  width: 100%;
   height: 767px;
 }
 
@@ -104,9 +104,9 @@ div.tooltip {
     position: absolute;
     text-align: left;
     width: 175px;
-    /*height: 28px;*/
-    padding: 5px;
-    font: 12px sans-serif;
+    padding: 8px;
+    font-family: "Lato", Helvetica, Arial, sans-serif;
+    font-size: 13px;
     /*background: lightsteelblue;*/
     background: #262626;
     color: white;
@@ -117,17 +117,9 @@ div.tooltip {
 
 /*TIMELINE*/
 
-/*p {
-    color: white;
-    margin: 50px;
-}
-
-a {
-    color: #4FDEF2;
-}*/
-
 .axis {
-    font: 10px sans-serif;
+    font-family: "Lato", Helvetica, Arial, sans-serif;
+    font-size: 13px;
     -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none;
@@ -137,15 +129,16 @@ a {
     fill: none;
     stroke: #000;
     stroke-opacity: .3;
-    stroke-width: 10px;
+    stroke-width: 5px;
     stroke-linecap: round;
 }
 
 .axis .halo {
     fill: none;
-    stroke: #ddd;
-    stroke-width: 8px;
+    stroke: #a6a6a6;
+    stroke-width: 5px;
     stroke-linecap: round;
+    /*float: left;*/
 }
 
 .slider .handle {
@@ -157,17 +150,56 @@ a {
     position: absolute;
 }
 
+/*LEGEND*/
+
 .truck-legend {
     line-height: 18px;
-    color: #555;
+    text-align: center;
+    font-family: "Lato", Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    color: #737373;
 }
 
-.truck-legend i {
-    width: 38px;
-    height: 38px;
+.truck-legend strong{
+    width: 70px;
+    height: 50px;
     float: left;
-    margin-right: 8px;
-    opacity: 0.7;
+    margin-right: 20px;
+    margin-left: 35px;
+    margin-top: 0px;
+    opacity: 0.9;
+}
+
+.truck-legend .key-title{
+    font-size: 20px;
+}
+
+/*YOUTUBE BUTTON*/
+/*.container {*/
+    /*width: 500px;*/
+    /*margin: 0 auto;*/
+/*}*/
+
+.button {
+    padding: 0;
+    width: 500px;
+    height: 500px;
+    border: 0;
+    background-color: white;
+    outline: none;
+}
+
+#wrapper {
+    width: 250px;
+    height: 220px;
+    margin: auto;
+}
+
+#clock {
+    font-size: 50px;
+    font-family: 'Roboto', sans-serif;
+    /*font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;*/
+    font-weight: 200;
 }
 
 /****************************** Heatmap ******************************/
@@ -175,49 +207,6 @@ a {
     width: 90%;
     height: 1000px;
 }
-
-#wrapper {
-    width: 960px;
-    margin: 30px auto 0;
-}
-
-/*svg {
-    position: relative;
-}
-path {
-    fill: yellow;
-    stroke-width: 2px;
-    stroke: red;
-    stroke-opacity: 1;
-}
-.travelMarker {
-    fill: yellow;
-    opacity: 0.75;
-}
-.waypoints {
-    fill: black;
-    opacity: 0;
-}
-}
-.drinks {
-    stroke: black;
-    fill: red;
-}
-.lineConnect {
-    fill: none;
-    stroke: black;
-    opacity: 1;
-}
-.locnames {
-    fill: black;
-    text-shadow: 1px 1px 1px #FFF, 3px 3px 5px #000;
-    font-weight: bold;
-    font-size: 13px;
-}
-
-
-*/
-
 
 .CSSTableGenerator {
   margin:0px;padding:0px;
