Cleaned up page colors, added a link to heatmap, added source code link

--- a/v2/css/general.css
+++ b/v2/css/general.css
@@ -316,7 +316,8 @@ color: #ECEBEB;
 .banner {
 	padding: 100px 0;
 	color: #f8f8f8;
-	background: url(../img/intro/banner-bg.jpg) no-repeat center center;
+	/*background: url(../img/intro/banner-bg.jpg) no-repeat center center;*/
+	background: url(../img/intro/code-bg.jpg) no-repeat center center;
 	background-size: cover;
 }
 
