--- a/css/style2.css
+++ b/css/style2.css
@@ -37,7 +37,10 @@ h1 .sub-headline {
 
 .intro {
     font-size: 18px;
-    /*font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;*/
+    width: 80%;
+    margin-left: auto; 
+    margin-right: auto;
+    text-align: justify;
 }
 /****************************** Chloropleth ******************************/
 #chloropleth {
